--- a/public/admin/admin.html
+++ b/public/admin/admin.html
@@ -156,7 +156,7 @@
       <div class="thumbnail">
         <div class="caption">
           <h3>{{project.project}}</h3>
-          <p>Description: {{project.describe | limitTo: 100}}</p>
+          <p>Description: {{project.describe}}</p>
           <p>Github Url: {{project.url}}</p>
           <p>Website Url: {{project.webUrl}}</p>
 
